# mahjong-yaku

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  flake.nix  hie.yaml  mahjong-yaku.cabal  treefmt.toml
src/MahjongYaku/: Daisangen.hs  Element.hs  Tile.hs
test/: DaisangenSpec.hs  Driver.hs  ElementSpec.hs  SortSpec.hs  TileSpec.hs  test.hs
