cabal-version:      2.4
name:               mahjong-yaku
version:            0.1.0.0
license:            MIT
copyright:          2022 Sridhar Ratnakumar
maintainer:         srid@srid.ca
author:             Sridhar Ratnakumar
category:           Web

-- TODO: Before hackage release.
-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

extra-source-files:
  LICENSE
  README.md

library
  exposed-modules:
    MahjongYaku.Daisangen
    MahjongYaku.Sort
    MahjongYaku.Tile

  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:
    , base
    , relude

test-suite mahjong-yaku-test
  default-language: Haskell2010
  type:             exitcode-stdio-1.0
  main-is:          test.hs
  hs-source-dirs:   test
  build-depends:
    , base
    , mahjong-yaku
    , relude
    , tasty
    , tasty-hspec
    , tasty-hunit

executable mahjong-yaku
  build-depends:
    , aeson
    , async
    , base          >=4.13.0.0 && <=4.18.0.0
    , bytestring
    , containers
    , data-default
    , directory
    , filepath
    , mahjong-yaku
    , mtl
    , optics-core
    , profunctors
    , relude
    , shower
    , text
    , time
    , with-utf8

  mixins:
    base hiding (Prelude),
    relude (Relude as Prelude, Relude.Container.One),
    relude

  ghc-options:
    -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies -Wunused-foralls -Wunused-foralls
    -fprint-explicit-foralls -fprint-explicit-kinds

  default-extensions:
    NoStarIsType
    BangPatterns
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    GADTSyntax
    GeneralisedNewtypeDeriving
    ImportQualifiedPost
    KindSignatures
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NumericUnderscores
    OverloadedStrings
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
